--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -17685,7 +17685,17 @@ msgctxt "#36551"
 msgid "Defines the strength of the stereoscopic 3D effect in the GUI. This is done by controlling the depth of perception within the GUI, so the higher the value, the more elements will pop out of the screen. [Zero] Disables the stereoscopic 3D effect of the GUI.[CR]For a good visual experience, the value should be higher for small screens and lower for large screens. Note: this is not supported by all skins."
 msgstr ""
 
-#empty strings from id 36552 to 36599
+#: system/settings/settings.xml
+msgctxt "#36552"
+msgid "Pause playback during the sterescopic mode change"
+msgstr ""
+
+#: system/settings/settings.xml
+msgctxt "#36553"
+msgid "Pause for a small amount of time during a sterescopic mode change. This potentially allows don't skip frames during a sterescopic mode change."
+msgstr ""
+
+#empty strings from id 36554 to 36999
 #reserved strings 365XX
 
 #. Description of settings category "Music -> Library" with label #14022
